refs #43: thêm autocomplete tìm kiếm sản phẩm và blog